Ridge 100 times. Metric: -0.095

--- a/code/python/eleven_regressions/ridge_training.ipynb
+++ b/code/python/eleven_regressions/ridge_training.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -20,33 +22,60 @@
    "outputs": [],
    "source": [
     "pool = Pool('data')\n",
-    "train_pool, test_pool = pool.train_test_split()\n",
-    "train_pools = train_pool.split_by_position()"
+    "POSITIONS = list(range(10)) + [100]\n",
+    "scores = []\n",
+    "for i in range(100):\n",
+    "    train_pool, test_pool = pool.train_test_split()\n",
+    "    train_pools = train_pool.split_by_position()\n",
+    "    models = [\n",
+    "            Ridge()\n",
+    "\n",
+    "        for position in POSITIONS\n",
+    "    ]\n",
+    "    model = CounterfactualModel(models)\n",
+    "    model.fit(train_pools)\n",
+    "    prediction = model.predict(test_pool)\n",
+    "    scores.append(metric(prediction, test_pool.positions, test_pool.labels, test_pool.probas))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.09578437451182528"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "POSITIONS = list(range(10)) + [100]\n",
-    "models = [\n",
-    "    Ridge()\n",
-    "    for position in POSITIONS\n",
-    "]\n",
-    "model = CounterfactualModel(models)\n",
-    "model.fit(train_pools)"
+    "np.mean(scores)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02733702673641898"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "prediction = model.predict(test_pool)\n",
-    "prediction_metric = metric(prediction, test_pool.positions, test_pool.labels, test_pool.probas)"
+    "np.std(scores)"
    ]
   },
   {
@@ -57,7 +86,106 @@
     {
      "data": {
       "text/plain": [
-       "-0.057631307085919244"
+       "[-0.0547536843047496,\n",
+       " -0.09027840481879858,\n",
+       " -0.06314920809540481,\n",
+       " -0.07877466213770297,\n",
+       " -0.11875366168062856,\n",
+       " -0.12246324441688716,\n",
+       " -0.08184789577752026,\n",
+       " -0.0486915916126717,\n",
+       " -0.12867443011769295,\n",
+       " -0.14717417827755205,\n",
+       " -0.10583651983658571,\n",
+       " -0.07997125703139951,\n",
+       " -0.11807338183843162,\n",
+       " -0.0712973704757282,\n",
+       " -0.10369365419901075,\n",
+       " -0.0923276037020715,\n",
+       " -0.04378061163960419,\n",
+       " -0.04386471056720015,\n",
+       " -0.1013432546551835,\n",
+       " -0.06296153471063412,\n",
+       " -0.08115051146230014,\n",
+       " -0.10398433470656845,\n",
+       " -0.08429413924404992,\n",
+       " -0.08767289816911103,\n",
+       " -0.10444340235460406,\n",
+       " -0.13170902052112549,\n",
+       " -0.08412428522886539,\n",
+       " -0.10816256811420961,\n",
+       " -0.11893287392391566,\n",
+       " -0.09369301636097509,\n",
+       " -0.08748635271278143,\n",
+       " -0.09631209918390501,\n",
+       " -0.08813696356067309,\n",
+       " -0.13251625158876562,\n",
+       " -0.11328377801463597,\n",
+       " -0.09392145961734083,\n",
+       " -0.13327151525317218,\n",
+       " -0.091348062390975,\n",
+       " -0.09717865809611556,\n",
+       " -0.13202427327350855,\n",
+       " -0.09126735015719421,\n",
+       " -0.07446152388745098,\n",
+       " -0.11481941835750364,\n",
+       " -0.16328536462156656,\n",
+       " -0.0836285430824016,\n",
+       " -0.061576167316533724,\n",
+       " -0.09975198988979901,\n",
+       " -0.12795339068688397,\n",
+       " -0.10515270308961189,\n",
+       " -0.07419479281567883,\n",
+       " -0.08319573361877965,\n",
+       " -0.0917684411168821,\n",
+       " -0.14595886353018175,\n",
+       " -0.1175282321229187,\n",
+       " -0.1021563028497145,\n",
+       " -0.07937916241852261,\n",
+       " -0.09533918940612408,\n",
+       " -0.06511410227763717,\n",
+       " -0.10793096159265621,\n",
+       " -0.0835442335317212,\n",
+       " -0.08027180409068681,\n",
+       " -0.09465130195490747,\n",
+       " -0.046843249521279995,\n",
+       " -0.12054251209453425,\n",
+       " -0.09580926590605225,\n",
+       " -0.07607250140839147,\n",
+       " -0.04340062040197119,\n",
+       " -0.10574101923222463,\n",
+       " -0.10304637419463963,\n",
+       " -0.10382347348331215,\n",
+       " -0.0810295145992283,\n",
+       " -0.06898662080247339,\n",
+       " -0.14500836709329717,\n",
+       " -0.07615094893513388,\n",
+       " -0.11372514397909547,\n",
+       " -0.09783854883554342,\n",
+       " -0.08827141492038702,\n",
+       " -0.11008536578813098,\n",
+       " -0.08535379300383471,\n",
+       " -0.12446836914822877,\n",
+       " -0.0900002840060833,\n",
+       " -0.13144012878278646,\n",
+       " -0.10289112323750269,\n",
+       " -0.08011560639551342,\n",
+       " -0.10237257634074744,\n",
+       " -0.11651122839794567,\n",
+       " -0.1789359667578367,\n",
+       " -0.1234632087780408,\n",
+       " -0.05897259119272881,\n",
+       " -0.09218951592463734,\n",
+       " -0.05367923481959392,\n",
+       " -0.07236621776841955,\n",
+       " -0.08083010531947842,\n",
+       " -0.03076112503096974,\n",
+       " -0.15346620354488563,\n",
+       " -0.10934291681929613,\n",
+       " -0.10770727593571207,\n",
+       " -0.06953255362377558,\n",
+       " -0.05699140017133024,\n",
+       " -0.11638418889907202]"
       ]
      },
      "execution_count": 5,
@@ -66,7 +194,7 @@
     }
    ],
    "source": [
-    "prediction_metric"
+    "scores"
    ]
   },
   {
