--- a/code/python/eleven_regressions/xgb_training.ipynb
+++ b/code/python/eleven_regressions/xgb_training.ipynb
@@ -18,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pool = Pool('data')\n",
