Moving files to general directory.

--- a/code/python/eleven_regressions/ridge_training.ipynb
+++ b/code/python/eleven_regressions/ridge_training.ipynb
@@ -10,6 +10,8 @@
    "source": [
     "import numpy as np\n",
     "from sklearn.linear_model import Ridge\n",
+    "import sys\n",
+    "sys.path.append('../general')\n",
     "from pool import Pool\n",
     "from counterfactual_model import CounterfactualModel\n",
     "from metric import metric"
@@ -18,7 +20,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pool = Pool('data')\n",
