--- a/code/python/eleven_regressions/xgb_training.ipynb
+++ b/code/python/eleven_regressions/xgb_training.ipynb
@@ -10,6 +10,8 @@
    "source": [
     "import numpy as np\n",
     "import xgboost as xgb\n",
+    "import sys\n",
+    "sys.path.append('../general')\n",
     "from pool import Pool\n",
     "from counterfactual_model import CounterfactualModel\n",
     "from metric import metric"
