Different models for negative, zero and positive average target over query words. Metric ~0.05

--- a/code/python/query_clustering/training.ipynb
+++ b/code/python/query_clustering/training.ipynb
@@ -10,13 +10,12 @@
     "import imp\n",
     "import xgboost as xgb\n",
     "\n",
-    "import sys\n",
-    "sys.path.append('../eleven_regressions')\n",
-    "import pool as pool_module\n",
     "import query_clustering_model\n",
     "\n",
+    "import sys\n",
     "sys.path.append('../general')\n",
-    "from metric import metric"
+    "from metric import metric\n",
+    "import pool as pool_module"
    ]
   },
   {
@@ -43,7 +42,7 @@
    "source": [
     "pool = Pool('../data')\n",
     "train_pool, test_pool = pool.train_test_split()\n",
-    "pools = train_pool.split_by_queries(2)"
+    "pools = train_pool.split_by_queries()"
    ]
   },
   {
@@ -52,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "models = [xgb.XGBRegressor(), xgb.XGBRegressor()]\n",
+    "models = [xgb.XGBRegressor() for i in range(3)]\n",
     "model = QueryClusteringModel(models)"
    ]
   },
@@ -74,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "0.04912504859399411"
+       "0.04447018482823736"
       ]
      },
      "execution_count": 6,
@@ -89,37 +88,27 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from collections import Counter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({0: 4845, 1: 1096, 2: 374, 3: 10, 5: 3, 100: 20672})"
+       "Counter({0: 12247, 1: 73, 2: 629, 3: 71, 4: 16, 100: 13964})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from collections import Counter\n",
     "Counter(preditions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -133,22 +122,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0516609613386849"
+       "0.045493688187130545"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "metric(no_ml_predictions, test_pool.positions, test_pool.labels, test_pool.probas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pools"
    ]
   }
  ],
