--- a/code/python/prod_measure.ipynb
+++ b/code/python/prod_measure.ipynb
@@ -73,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "0.04447018482823736"
+       "0.060566405202164116"
       ]
      },
      "execution_count": 6,
@@ -93,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "Counter({0: 12247, 1: 73, 2: 629, 3: 71, 4: 16, 100: 13964})"
+       "Counter({0: 12745, 2: 152, 3: 114, 4: 11, 5: 1, 6: 1, 100: 13976})"
       ]
      },
      "execution_count": 7,
@@ -128,7 +128,7 @@
     {
      "data": {
       "text/plain": [
-       "0.045493688187130545"
+       "0.05915236401586202"
       ]
      },
      "execution_count": 9,
@@ -142,14 +142,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.017340251342873616"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metric(test_pool.prod_positions, test_pool.positions, test_pool.labels, test_pool.probas)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "pools"
-   ]
+   "source": []
   }
  ],
  "metadata": {
