--- a/code/python/query_clustering/training.ipynb
+++ b/code/python/query_clustering/training.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -48,7 +50,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "models = [xgb.XGBRegressor() for i in range(3)]\n",
@@ -73,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "0.060566405202164116"
+       "-0.1873374260490817"
       ]
      },
      "execution_count": 6,
@@ -93,7 +97,7 @@
     {
      "data": {
       "text/plain": [
-       "Counter({0: 12745, 2: 152, 3: 114, 4: 11, 5: 1, 6: 1, 100: 13976})"
+       "Counter({0: 11336, 1: 197, 2: 55, 3: 75, 4: 48, 5: 3, 6: 1, 100: 15285})"
       ]
      },
      "execution_count": 7,
@@ -128,7 +132,7 @@
     {
      "data": {
       "text/plain": [
-       "0.05915236401586202"
+       "-0.1915574134764858"
       ]
      },
      "execution_count": 9,
@@ -148,7 +152,7 @@
     {
      "data": {
       "text/plain": [
-       "0.017340251342873616"
+       "0.020211652404721694"
       ]
      },
      "execution_count": 10,
