--- a/code/python/query_clustering/training.ipynb
+++ b/code/python/query_clustering/training.ipynb
@@ -71,36 +71,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.1873374260490817"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "metric(preditions, test_pool.positions, test_pool.labels, test_pool.probas)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({0: 11336, 1: 197, 2: 55, 3: 75, 4: 48, 5: 3, 6: 1, 100: 15285})"
+       "-0.22942258318312206"
       ]
      },
      "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metric(preditions, test_pool.positions, test_pool.targets, test_pool.probas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({0: 11108, 2: 208, 3: 43, 4: 21, 5: 1, 7: 1, 100: 15618})"
+      ]
+     },
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -126,33 +126,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.1915574134764858"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "metric(no_ml_predictions, test_pool.positions, test_pool.labels, test_pool.probas)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.020211652404721694"
+       "-0.2325735009026584"
       ]
      },
      "execution_count": 10,
@@ -161,7 +141,27 @@
     }
    ],
    "source": [
-    "metric(test_pool.prod_positions, test_pool.positions, test_pool.labels, test_pool.probas)"
+    "metric(no_ml_predictions, test_pool.positions, test_pool.targets, test_pool.probas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02329873777741115"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metric(test_pool.prod_positions, test_pool.positions, test_pool.targets, test_pool.probas)"
    ]
   },
   {
