--- a/code/python/classification/logistic_vs_xgboost.ipynb
+++ b/code/python/classification/logistic_vs_xgboost.ipynb
@@ -93,10 +93,10 @@
     {
      "data": {
       "text/plain": [
-       "(0.9645925925925926,\n",
-       " 0.09595959595959595,\n",
-       " 0.6089743589743589,\n",
-       " 0.16579406631762653)"
+       "(0.969037037037037,\n",
+       " 0.05510907003444317,\n",
+       " 0.7868852459016393,\n",
+       " 0.10300429184549355)"
       ]
      },
      "execution_count": 6,
@@ -127,10 +127,10 @@
     {
      "data": {
       "text/plain": [
-       "(0.9622962962962963,\n",
-       " 0.1191919191919192,\n",
-       " 0.44696969696969696,\n",
-       " 0.18819776714513556)"
+       "(0.9667407407407408,\n",
+       " 0.02640642939150402,\n",
+       " 0.3150684931506849,\n",
+       " 0.048728813559322036)"
       ]
      },
      "execution_count": 8,
@@ -167,83 +167,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "26790"
+       "(26882, 118, 898, 836)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(lr_prediction[lr_prediction == xgb_prediction])"
+    "(len(lr_prediction[lr_prediction == xgb_prediction]),\n",
+    " len(lr_prediction[lr_prediction != xgb_prediction]),\n",
+    " len(lr_prediction[lr_prediction != test_labels]),\n",
+    " len(lr_prediction[xgb_prediction != test_labels]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "210"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(lr_prediction[lr_prediction != xgb_prediction])"
+    "xgb.XGBClassifier()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1018"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({0: 26927, 1: 73}) Counter({0: 26939, 1: 61}) Counter({0: 26129, 1: 871})\n"
+     ]
     }
    ],
    "source": [
-    "len(lr_prediction[lr_prediction != test_labels])"
+    "from collections import Counter\n",
+    "print(\n",
+    "    Counter(lr_prediction),\n",
+    "    Counter(xgb_prediction),\n",
+    "    Counter(test_labels)\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "956"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(lr_prediction[xgb_prediction != test_labels])"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
