--- a/code/python/networks/eleven_regressions.ipynb
+++ b/code/python/networks/eleven_regressions.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,60 @@
       "[-0.12 -0.22  0.01 -0.1   0.22 -0.18 -0.09 -0.14 -0.03 -0.21] 0.22 1.0\n",
       "[-0.08 -0.11  0.12  0.12  0.21  0.14  0.26  0.05 -0.14 -0.25] 0.26 -1.7\n",
       "[-0.11 -0.06 -0.29  0.02 -0.08 -0.07  0.06  0.01 -0.33 -0.14] 0.06 1.0\n",
-      "[ 0.01  0.17  0.12 -0.2   0.02 -0.09  0.01  0.16 -0.15  0.01] 0.17 1.0\n"
+      "[ 0.01  0.17  0.12 -0.2   0.02 -0.09  0.01  0.16 -0.15  0.01] 0.17 1.0\n",
+      "[-0.28  0.25 -0.22  0.23  0.05 -0.29 -0.01 -0.34  0.18 -0.17] 0.25 1.0\n",
+      "[ 0.01 -0.08 -0.06  0.16  0.18  0.04 -0.14 -0.06 -0.2  -0.03] 0.18 -2.7\n",
+      "[ 0.21 -0.1  -0.32  0.09  0.34  0.02  0.24 -0.36  0.01 -0.07] 0.34 1.0\n",
+      "[-0.19 -0.37 -0.03 -0.43  0.41 -0.14  0.05 -0.53  0.13  0.34] 0.41 -1.6\n",
+      "[-0.35  0.1  -0.16 -0.27  0.05 -0.08 -0.08  0.14  0.   -0.04] 0.14 1.0\n",
+      "[ 0.05 -0.12  0.16 -0.03 -0.25 -0.08 -0.18  0.05  0.01 -0.19] 0.16 -1.91\n",
+      "[ 0.53 -0.16  0.05 -0.01 -0.02  0.04 -0.01  0.1  -0.14 -0.18] 0.53 1.0\n",
+      "[-0.29  0.11  0.28  0.11 -0.02 -0.2  -0.16 -0.34 -0.55 -0.16] 0.28 -0.89\n",
+      "[ 0.25  0.2  -0.44  0.14 -0.07 -0.04  0.1  -0.03 -0.12 -0.04] 0.25 1.0\n",
+      "[ 0.17 -0.08  0.11  0.03 -0.46  0.15  0.36  0.02  0.1  -0.04] 0.36 -1.64\n",
+      "[ 0.02 -0.07 -0.05 -0.01 -0.03 -0.09  0.1   0.04  0.11  0.08] 0.11 -1.6\n",
+      "[-0.2  -0.   -0.07  0.19  0.12 -0.03  0.02 -0.17  0.19 -0.09] 0.19 1.0\n",
+      "[-0.25 -0.22 -0.13 -0.12  0.03 -0.12  0.18  0.09 -0.05 -0.02] 0.18 -1.91\n",
+      "[ 0.06  0.02 -0.16 -0.23 -0.05  0.17 -0.36 -0.03  0.1  -0.03] 0.17 -3.08\n",
+      "[-0.54  0.15  0.12 -0.03  0.09  0.17  0.13  0.07 -0.46 -0.11] 0.17 1.0\n",
+      "[-0.13  0.12  0.08 -0.06  0.1  -0.13  0.05  0.03  0.06  0.03] 0.12 -2.0\n",
+      "[-0.09 -0.26  0.1  -0.12 -0.2   0.07  0.09  0.24  0.21 -0.01] 0.24 1.0\n",
+      "[-0.04  0.55 -0.09 -0.25  0.15  0.09  0.01 -0.07  0.14  0.18] 0.55 -1.94\n",
+      "[ 0.09  0.14  0.19 -0.09 -0.04  0.07  0.01  0.   -0.15 -0.11] 0.19 -2.64\n",
+      "[-0.04 -0.32 -0.16  0.2   0.09 -0.13  0.17  0.03 -0.01 -0.01] 0.2 1.0\n",
+      "[-0.2  -0.59 -0.29 -0.31  0.36  0.07 -0.02 -0.31  0.14  0.02] 0.36 -1.66\n",
+      "[-0.13  0.04 -0.15 -0.06  0.11  0.19 -0.01 -0.07  0.01 -0.29] 0.19 1.0\n",
+      "[ 0.01  0.13  0.2  -0.17  0.02 -0.01 -0.03 -0.2  -0.06  0.09] 0.2 -2.62\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.09  0.02 -0.23 -0.2   0.14 -0.29  0.25 -0.08 -0.04  0.19] 0.25 -1.55\n",
+      "[ 0.05 -0.07 -0.22  0.11 -0.1  -0.21  0.28 -0.27  0.01  0.18] 0.28 -1.64\n",
+      "[-0.06 -0.24  0.19  0.08  0.23 -0.33  0.01 -0.12  0.11  0.2 ] 0.23 1.0\n",
+      "[ 0.32 -0.31  0.35 -0.2  -0.19 -0.21 -0.25 -0.13 -0.15 -0.23] 0.35 1.0\n",
+      "[-0.23 -0.22 -0.1   0.03 -0.18  0.46 -0.04 -0.19  0.33  0.21] 0.46 -0.91\n",
+      "[-0.09 -0.49 -0.27 -0.12  0.04  0.12 -0.23  0.11 -0.04 -0.39] 0.12 -1.6\n",
+      "[ 0.11 -0.07 -0.84  0.19  0.04 -0.13  0.26  0.28  0.13 -0.25] 0.28 1.0\n",
+      "[-0.62 -0.01 -0.   -0.14  0.23 -0.36  0.04 -0.09 -0.04  0.05] 0.23 -1.43\n",
+      "[-0.02  0.13  0.05 -0.42  0.13  0.09 -0.31  0.04 -0.2  -0.47] 0.13 1.0\n",
+      "[-0.02  0.06  0.31  0.06  0.14 -0.08  0.06 -0.09 -0.09 -0.11] 0.31 1.0\n",
+      "[-0.05 -0.2   0.33 -0.32  0.24 -0.22 -0.12  0.02  0.02 -0.1 ] 0.33 1.0\n",
+      "[-0.13 -0.1   0.11 -0.08 -0.15 -0.03  0.23  0.21 -0.01 -0.03] 0.23 1.0\n",
+      "[-0.68  0.16  0.09 -0.37  0.23 -0.21 -0.14  0.27 -0.26  0.17] 0.27 1.0\n",
+      "[-0.52 -0.01  0.84 -0.14 -0.12  0.02 -1.08  0.57  0.47 -0.38] 0.84 -1.91\n",
+      "[ 0.03 -0.21  0.09 -0.14 -0.08 -0.49  0.47 -0.02 -0.03  0.04] 0.47 -1.91\n",
+      "[-0.09 -0.31 -0.   -0.21 -0.11 -0.02  0.03 -0.25 -0.34 -0.54] 0.03 -2.64\n",
+      "[ 0.21  0.23  0.02  0.23 -0.05 -0.22  0.01 -0.07  0.1  -0.09] 0.23 1.0\n",
+      "[-0.16  0.04 -0.23  0.2  -0.13  0.03 -0.05 -0.06  0.    0.09] 0.2 -1.63\n",
+      "[ 0.23 -0.09 -0.14 -0.07  0.04 -0.06 -0.18  0.05  0.06 -0.01] 0.23 1.0\n",
+      "[ 0.39  0.02 -0.12 -0.2  -0.17  0.    0.09 -0.11 -0.19 -0.03] 0.39 1.0\n",
+      "[-0.01  0.22  0.41  0.24 -0.12  0.32 -0.08  0.26  0.2  -0.35] 0.41 -2.64\n",
+      "[ 0.24 -0.22 -0.38  0.03  0.02  0.19 -0.01 -0.12 -0.1  -0.22] 0.24 1.0\n",
+      "-0.006897046824893752\n",
+      "Counter({1: 8512, 10: 8459, 2: 8244, 3: 7023, 5: 5348, 7: 5335, 6: 5243, 8: 5122, 4: 4807, 9: 4788, 11: 119})\n"
      ]
     }
    ],
