High weights for non zero targets. Linear model does not work.

--- a/code/python/eleven_classifications/classification_training.ipynb
+++ b/code/python/eleven_classifications/classification_training.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -51,20 +51,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_sample_weight(pool):\n",
+    "    proportion = len(pool.targets[pool.targets != 0]) / len(pool.targets[pool.targets == 0])\n",
+    "    return [proportion if target == 0 else 100 for target in pool.targets]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.fit(train_pools, [{\n",
-    "        'sample_weight':\n",
-    "        [2 if target != 0 else 1 for target in tmp_train_pool.targets]\n",
+    "        'sample_weight': get_sample_weight(tmp_train_pool)\n",
     "    } for tmp_train_pool in train_pools\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -76,16 +90,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.11338087155688494"
+       "-0.052525255694655985"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,16 +110,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({10: 27000})"
+       "Counter({7: 2, 10: 26998})"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,24 +127,6 @@
    "source": [
     "Counter(prediction)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
