--- a/code/python/eleven_regressions/xgb_training.ipynb
+++ b/code/python/eleven_regressions/xgb_training.ipynb
@@ -26,19 +26,18 @@
    "outputs": [],
    "source": [
     "pool = Pool('data')\n",
-    "POSITIONS = list(range(10)) + [100]\n",
     "scores = []\n",
     "for i in range(100):\n",
     "    train_pool, test_pool = pool.train_test_split()\n",
     "    train_pools = train_pool.split_by_position()\n",
     "    models = [\n",
     "        xgb.XGBRegressor()\n",
-    "        for position in POSITIONS\n",
+    "        for position in range(CounterfactualModel.NONE_POSITION)\n",
     "    ]\n",
     "    model = CounterfactualModel(models)\n",
     "    model.fit(train_pools)\n",
     "    prediction = model.predict(test_pool)\n",
-    "    scores.append(metric(prediction, test_pool.positions, test_pool.labels, test_pool.probas))"
+    "    scores.append(metric(prediction, test_pool.positions, test_pool.targets, test_pool.probas))"
    ]
   },
   {
