Rtght PCA. Negative metric

--- a/code/python/feature_selection/PCA.ipynb
+++ b/code/python/feature_selection/PCA.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sklearn.decomposition import PCA\n",
     "\n",
     "import sys\n",
     "sys.path.append('../general')\n",
     "from pool import Pool\n",
-    "from utils import predict_positions\n",
     "from metric import metric\n",
+    "\n",
+    "sys.path.append('../simple_regression')\n",
+    "from test_regression_pca import test_regression_with_pca\n",
     "\n",
     "import xgboost as xgb"
    ]
@@ -21,7 +22,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pool = Pool('../data')"
@@ -29,13 +32,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "pca = PCA(500)"
+    "scores = test_regression_with_pca(\n",
+    "    [xgb.XGBRegress or() for i in range(15)],\n",
+    "    pool,\n",
+    "    [1000] * 5 + [800] * 5 + [500] * 5\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-0.005974832967658878, -0.0010032334901509822, -0.008457894305647081)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(scores[:5]), np.mean(scores[5:10]), np.mean(scores[10:])"
    ]
   },
   {
@@ -46,8 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "PCA(copy=True, iterated_power='auto', n_components=500, random_state=None,\n",
-       "  svd_solver='auto', tol=0.0, whiten=False)"
+       "(0.005462215464896075, 0.010501830486602907, 0.011687708783870493)"
       ]
      },
      "execution_count": 5,
@@ -56,155 +82,7 @@
     }
    ],
    "source": [
-    "pca.fit(pool.features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_features = pca.transform(pool.features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "old_features = pool.features\n",
-    "pool.features = new_features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((90000, 500), (90000, 1052))"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.shape(pool.features), np.shape(old_features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "positions_one_hot = np.array([\n",
-    "    [0 if position != current_position else 1 for position in pool.POSITIONS]\n",
-    "    for current_position in pool.positions\n",
-    "])\n",
-    "pool.features_with_positions = np.concatenate((pool.features, positions_one_hot), axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def test_regression(model, pool, trys=10):\n",
-    "    scores = []\n",
-    "    for i in range(trys):\n",
-    "        train_pool, test_pool = pool.train_test_split()\n",
-    "        model.fit(train_pool.features_with_positions, train_pool.targets)\n",
-    "        positions = predict_positions(test_pool.features, model)\n",
-    "        scores.append(metric(positions, test_pool.positions, test_pool.targets, test_pool.probas))\n",
-    "    return scores"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scores = test_regression(xgb.XGBRegressor(), pool)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.005419755189839759"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.mean(scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.006192041998093268"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.std(scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-0.009759279571850554,\n",
-       " 0.0020983619771843065,\n",
-       " -0.0114563559368969,\n",
-       " -0.004999340311325385,\n",
-       " 0.002287680529473698,\n",
-       " -0.015381700301122984,\n",
-       " 0.0014189943860032615,\n",
-       " -0.002225021942810836,\n",
-       " -0.0035320420160309452,\n",
-       " -0.012648848711021262]"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "scores"
+    "np.std(scores[:5]), np.std(scores[5:10]), np.std(scores[10:])"
    ]
   },
   {
