Eleven regressions XGB SVR and Ridge. Negative metrics

--- a/code/python/eleven_regressions/xgb_training.ipynb
+++ b/code/python/eleven_regressions/xgb_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -10,54 +10,30 @@
    "source": [
     "import numpy as np\n",
     "import xgboost as xgb\n",
+    "from sklearn.svm import LinearSVR\n",
+    "from sklearn.linear_model import Ridge\n",
     "import sys\n",
     "sys.path.append('../general')\n",
     "from pool import Pool\n",
-    "from counterfactual_model import CounterfactualModel\n",
-    "from metric import metric"
+    "from test_eleven_regressions import test_eleven_regressions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "pool = Pool('data')\n",
-    "scores = []\n",
-    "for i in range(100):\n",
-    "    train_pool, test_pool = pool.train_test_split()\n",
-    "    train_pools = train_pool.split_by_position()\n",
-    "    models = [\n",
-    "        xgb.XGBRegressor()\n",
-    "        for position in range(CounterfactualModel.NONE_POSITION)\n",
-    "    ]\n",
-    "    model = CounterfactualModel(models)\n",
-    "    model.fit(train_pools)\n",
-    "    prediction = model.predict(test_pool)\n",
-    "    scores.append(metric(prediction, test_pool.positions, test_pool.targets, test_pool.probas))"
+    "pool = Pool('../data')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.012602435466372259"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.mean(scores)"
+    "scores = test_eleven_regressions(xgb.XGBRegressor, pool, runs=5)"
    ]
   },
   {
@@ -68,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "0.010199768201375357"
+       "-0.005543594337125238"
       ]
      },
      "execution_count": 4,
@@ -77,7 +53,7 @@
     }
    ],
    "source": [
-    "np.std(scores)"
+    "np.mean(scores)"
    ]
   },
   {
@@ -88,106 +64,7 @@
     {
      "data": {
       "text/plain": [
-       "[-0.01466289476164105,\n",
-       " -0.02124527966468653,\n",
-       " -0.023016044599362448,\n",
-       " -0.02660443457542293,\n",
-       " -0.018791475112634685,\n",
-       " -0.018560522325245365,\n",
-       " -0.015189188305706841,\n",
-       " -0.005444941595970838,\n",
-       " -0.01194105326201548,\n",
-       " -0.02315992760102061,\n",
-       " -0.014995484997333493,\n",
-       " -0.017140057610018827,\n",
-       " -0.015323809819939506,\n",
-       " -0.0030449010249086594,\n",
-       " -0.0011577288889991827,\n",
-       " 0.005095302387344236,\n",
-       " -0.020771859603002422,\n",
-       " -0.005369148587725959,\n",
-       " -0.016088743754478784,\n",
-       " -0.010611795248429525,\n",
-       " -0.010074495641224143,\n",
-       " -0.035414175879651066,\n",
-       " 0.010959180272488309,\n",
-       " -0.027276283241525187,\n",
-       " -0.01228841379442178,\n",
-       " -0.0034055835992502807,\n",
-       " -0.010321491235873545,\n",
-       " -0.0200604721563684,\n",
-       " -0.01727742972042488,\n",
-       " 0.005818423764532137,\n",
-       " -0.021365765019666142,\n",
-       " -0.01326006587129743,\n",
-       " -0.0037776838730305927,\n",
-       " -0.015076659439960735,\n",
-       " -0.015328869098979752,\n",
-       " -0.03270759771991427,\n",
-       " -0.038011160286066874,\n",
-       " -0.0063945586999694624,\n",
-       " -0.01897685727466245,\n",
-       " -0.01834287858294898,\n",
-       " -0.009774291136647063,\n",
-       " -0.012517001336741192,\n",
-       " -0.04184418846655774,\n",
-       " -0.020982067719608796,\n",
-       " -0.013946175723174907,\n",
-       " 0.00022614866301485498,\n",
-       " -0.021641347719339045,\n",
-       " -0.003353613389031492,\n",
-       " -0.0054402355600709175,\n",
-       " -0.019665261983817052,\n",
-       " 0.0009753728226700697,\n",
-       " -0.0025345593718645127,\n",
-       " -0.028777703948553057,\n",
-       " -0.02469166338180652,\n",
-       " 0.004474323422373893,\n",
-       " -0.023503709251722054,\n",
-       " -0.01392557387709419,\n",
-       " -0.01972636937532101,\n",
-       " 0.00027716733754041493,\n",
-       " -0.01181044508137968,\n",
-       " -0.01704763645915234,\n",
-       " -0.008783846825216216,\n",
-       " -0.006155714822266986,\n",
-       " -0.0022212533650712673,\n",
-       " -0.003346806304126637,\n",
-       " -0.004761988365411521,\n",
-       " -0.012682886378416731,\n",
-       " -0.004651751742756712,\n",
-       " -0.001464326785358994,\n",
-       " -0.0027617069121946515,\n",
-       " 0.0019828885750147063,\n",
-       " -0.017313740800003436,\n",
-       " -0.014571865145230845,\n",
-       " -0.0019174527624610813,\n",
-       " -0.0003210395905283271,\n",
-       " -0.004564101047920221,\n",
-       " -0.011886669869112697,\n",
-       " -0.0034397136952835088,\n",
-       " -0.02648221088102134,\n",
-       " 0.004521614095350015,\n",
-       " -0.03339111216747917,\n",
-       " -0.011663090271691896,\n",
-       " -0.020930565163267134,\n",
-       " 0.0031462143702097522,\n",
-       " -0.01314419218058297,\n",
-       " -0.0011824460961692832,\n",
-       " -0.01850679905080877,\n",
-       " -0.021537997350641228,\n",
-       " -0.015070964427361947,\n",
-       " -0.006565106022314267,\n",
-       " -0.00935739230350185,\n",
-       " -0.005580497961315952,\n",
-       " -0.024270415204905978,\n",
-       " -0.013166888118629361,\n",
-       " -0.008954614893130196,\n",
-       " -0.005070976650342347,\n",
-       " -0.014277691661439862,\n",
-       " -0.01816644815559103,\n",
-       " -0.010979303335022342,\n",
-       " -0.02491502978552727]"
+       "0.007222287194589997"
       ]
      },
      "execution_count": 5,
@@ -196,7 +73,67 @@
     }
    ],
    "source": [
-    "scores"
+    "np.std(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svr_scores = test_eleven_regressions(LinearSVR, pool, runs=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-0.12841846123760514, 0.03179600218646601)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(svr_scores), np.std(svr_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ridge_scores = test_eleven_regressions(Ridge, pool, runs=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-0.09154572393312017, 0.019101597422691744)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(ridge_scores), np.std(ridge_scores)"
    ]
   },
   {
