Eleven regressions, simple regression, files for PCA and other general files.

--- a/code/python/simple_regression/xgb_training.ipynb
+++ b/code/python/simple_regression/xgb_training.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -12,9 +14,11 @@
     "sys.path.append('../general')\n",
     "from pool import Pool\n",
     "\n",
-    "from test import test_regression\n",
+    "from test_regression import test_regression\n",
     "\n",
-    "import xgboost as xgb"
+    "import xgboost as xgb\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.svm import SVR"
    ]
   },
   {
@@ -34,27 +38,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scores = test_regression([xgb.XGBRegressor() for i in range(10)], pool)"
+    "xgb_scores = test_regression(\n",
+    "    [xgb.XGBRegressor() for i in range(5)], pool\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.00762394537903952"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "np.mean(scores)"
+    "xgb_one_hot_scores = test_regression(\n",
+    "    [xgb.XGBRegressor() for i in range(5)], pool, one_hot=True\n",
+    ")"
    ]
   },
   {
@@ -65,16 +64,7 @@
     {
      "data": {
       "text/plain": [
-       "[0.015262860681146408,\n",
-       " 0.0013202672279031288,\n",
-       " 0.009659397060189513,\n",
-       " 0.009997584896147958,\n",
-       " 0.014878361629206449,\n",
-       " 0.008231315895395792,\n",
-       " 3.110215671620996e-05,\n",
-       " 8.676699013171097e-05,\n",
-       " 0.0070783007964941086,\n",
-       " 0.009693496457063931]"
+       "(0.008429487341720544, 0.008001653792134694)"
       ]
      },
      "execution_count": 5,
@@ -83,7 +73,27 @@
     }
    ],
    "source": [
-    "scores"
+    "np.mean(xgb_scores), np.mean(xgb_one_hot_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.007193768478690833, 0.0033440772255714847)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(xgb_scores), np.std(xgb_one_hot_scores)"
    ]
   },
   {
